# kintsugi-data

./: README.md  pyproject.toml
src/kintsugi_data/: cli.py
